Update .gitignore to include more ignored files
Added additional entries to ignore Visual Studio and OS junk files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+# .NET build outputs
 bin/
 obj/
+
+# Visual Studio / Rider
+.vs/
+.idea/
 *.user
 *.suo
-.vs/
+*.userosscache
+*.sln.docstates
+
+# OS junk
+Thumbs.db
+.DS_Store
